src/styles.css
* {
	font-family: 'Times New Roman', Times, serif;
	box-sizing: border-box;
}

.bold {
	font-weight: bold;
}

body {
	margin: 0;
	padding: 0;
}

#page-container {
	align-items: center;
	background-color: #ff9c38;
	display: flex;
	flex-direction: column;
	padding-bottom: 30px;
}

#paper {
	background-color: white;
	box-shadow: 0px 15px 15px -15px rgba(0, 0, 0, 0.3);
	display: flex;
	height: 100%;
	justify-content: center;
	width: 100%;
}

#paper-content {
	display: flex;
	flex-direction: column;
	max-width: 1000px;
	padding: 300px 20px 50px 20px;
	width: 100%;
}

#intro {
	align-self: flex-start;
	display: flex;
	flex-direction: column;
	font-size: 1.5rem;
}

#intro > span {
	margin-bottom: 5px;
}

#intro-2 {
	margin-left: 3rem;
}

#intro-3 {
	margin-left: 6rem;
}

#intro-4 {
	margin-left: 9rem;
}

#full-name-container {
	align-items: flex-end;
	align-self: flex-end;
	display: flex;
	flex-direction: column;
	margin-top: 30px;
}

#full-name-preline {
	font-size: 1.5rem;
}

#full-name-title {
	font-size: 3.6rem;
	margin: 0;
}

#fleuron {
	align-self: center;
	height: 30%;
	margin-top: 75px;
	margin-bottom: 90px;
}

#about-me-section {
	align-items: center;
	display: flex;
	flex-direction: column;
}

.chapter-number {
	align-self: center;
	font-size: 1.2rem;
	letter-spacing: 2px;
	margin-bottom: 5px;
}

.chapter-title {
	align-self: center;
	font-size: 2.75rem;
	margin: 0;
	margin-bottom: 10px;
}

#about-me-section > p {
	font-size: 1.2rem;
	line-height: 1.5rem;
	max-width: 1000px;
	text-indent: 2.5rem;
}

#about-me-section > ul {
	align-self: flex-start;
	font-size: 1.2rem;
}

#resume-section {
	align-items: center;
	display: flex;
	flex-direction: column;
	margin-top: 100px;
}

#download-resume-button {
	border: 2px solid black;
	border-radius: 15px;
	color: black;
	cursor: pointer;
	font-size: 1.2rem;
	font-weight: bold;
	margin-top: 20px;
	padding: 20px;
	text-align: center;
	text-decoration: none;
}

#download-resume-button:hover {
	animation-duration: 1s;
	animation-fill-mode: forwards;
	animation-name: button-fill;
}

#software-section {
	display: flex;
	flex-direction: column;
	margin-top: 100px;
}

#software-section > p {
	font-size: 1.2rem;
	line-height: 1.5rem;
	max-width: 1000px;
	text-indent: 2.5rem;
}

@keyframes button-fill {
	0% {
		background-color: transparent;
		color: black;
	}

	100% {
		background-color: black;
		color: white;
	}
}

#resume-section > p {
	align-self: flex-start;
	font-size: 1.2rem;
	line-height: 1.5rem;
	max-width: 1000px;
	margin-top: 40px;
	margin-bottom: 0;
	text-indent: 2.5rem;
}

#resume-section > ul {
	align-self: flex-start;
	font-size: 1.2rem;
	line-height: 1.5rem;
	margin-top: 5px;
	margin-left: 0.5rem;
}

#software-tickets {
	display: flex;
	justify-content: space-evenly;
	width: 100%;
}

.software-ticket {
	background-color: white;
	border-top: 1px lightgrey dashed;
	box-shadow: 0px 15px 15px -15px rgba(0, 0, 0, 0.3);
	display: flex;
	flex-direction: column;
	padding: 50px 25px;
	margin-bottom: 30px;
	width: 352px;
	z-index: 1;
}

.software-ticket h2 {
	font-size: 2rem;
	text-align: center;
}

.software-ticket > img {
	align-self: center;
	height: 175px;
	margin-bottom: 25px;
	width: 175px;
}

.software-ticket > p {
	font-size: 1.2rem;
	line-height: 1.5rem;
}

.software-ticket > a {
	font-size: 1.2rem;
	text-decoration: none;
}

@media screen and (max-width: 670px) {
	#page-content-container {
		padding-top: 150px;
	}

	#intro {
		align-items: center;
		align-self: center;
	}

	#intro > span {
		margin-left: 0;
		font-size: 1rem;
	}

	#full-name-container {
		align-items: center;
		align-self: center;
	}

	#full-name-preline {
		font-size: 1.2rem;
	}

	#full-name-title {
		font-size: 2.4rem;
		text-align: center;
	}

	#fleuron {
		height: 100%;
		width: 80%;
		margin-bottom: 50px;
	}

	.chapter-number {
		font-size: 1rem;
	}

	.chapter-title {
		font-size: 2rem;
	}

	#resume-section > ul {
		margin-left: 0;
	}

	#software-tickets {
		align-items: center;
		flex-direction: column;
		justify-content: flex-start;
	}

	.software-ticket {
		width: 90%;
		margin-bottom: 0;
	}
}

